--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ VITE_RENEW_UUID=5dce006c-1009-49b3-9583-878e8c45ab52 #설정에 있는 Server ID
 VITE_API_KEY=ptlc_bLE76fRO4eckRRp6v0xIXX90GHWorEtTXCQfy2Biu2J #발급받은 계정 API Key
 VITE_MC_NAME=은우 서버 #서버 이름
 VITE_MC_ADDRESS=join.wrd.kr:25118 #마인크래프트 서버 주소
-VITE_PLUS=true #시간 연장 버튼이 보임 여부 (true/false)
-VITE_PASSWORD_ENABLED=false #사이트 접속 시 비밀번호를 입력해야할지 여부 (true/false)
+VITE_PLUS=false #시간 연장 버튼이 보임 여부 (true/false)
+VITE_PASSWORD_ENABLED=true #사이트 접속 시 비밀번호를 입력해야할지 여부 (true/false)
 VITE_DASH_PASSWORD=weirdhost #비밀번호
