--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-VITE_GITHUB_ICON=true #오른쪽 위에 Github 아이콘이 뜨게 할지 여부 (true/false)
+VITE_GITHUB_ICON=false #오른쪽 위에 Github 아이콘이 뜨게 할지 여부 (true/false)
 VITE_PANEL_URL=https://hub.weirdhost.xyz #⚠️Weirdhost 일반 유저 수정 금지. 유료 사용자는 https://plus.weirdhost.xyz로 변경⚠️ / 대시보드 주소
-VITE_SERVER_ID=5dce006c #대시보드 서버에 있는 ID
-VITE_RENEW_UUID=5dce006c-1009-49b3-9583-878e8c45ab52 #설정에 있는 Server ID
+VITE_SERVER_ID=9efa927f #대시보드 서버에 있는 ID
+VITE_RENEW_UUID=9efa927f-5b28-498f-a735-63e51ada4137 #설정에 있는 Server ID
 VITE_API_KEY=ptlc_bLE76fRO4eckRRp6v0xIXX90GHWorEtTXCQfy2Biu2J #발급받은 계정 API Key
 VITE_MC_NAME=은우 서버 #서버 이름
-VITE_MC_ADDRESS=join.wrd.kr:25118 #마인크래프트 서버 주소
+VITE_MC_ADDRESS=join.wrd.kr:25527 #마인크래프트 서버 주소
 VITE_PLUS=false #시간 연장 버튼이 보임 여부 (true/false)
 VITE_PASSWORD_ENABLED=false #사이트 접속 시 비밀번호를 입력해야할지 여부 (true/false)
 VITE_DASH_PASSWORD=weirdhost #비밀번호
